# mySheets

./: .gitignore  CMakeLists.txt  Doxyfile  FindANTLR.cmake  README.md  finddialog.ui  gocell.ui  main.cpp  structures.cpp  version.cpp  versiondef.h.in
.github/workflows/: macos_prerelease.yml  ubuntu_prerelease.yml  windows_prerelease.yml
antlr4_formula/: CMakeLists.txt
header/: FormulaAST.h  FormulaBaseListener.h  FormulaLexer.h  FormulaListener.h  FormulaParser.h  cell.h  common.h  finddialog.h  formula.h  gocell.h  sheet.h  spreadsheet.h  test_runner_p.h  ui_finddialog.h  ui_gocell.h
src/: CMakeLists.txt  FindANTLR.cmake  FormulaAST.cpp  FormulaBaseListener.cpp  FormulaLexer.cpp  FormulaListener.cpp  FormulaParser.cpp  cell.cpp  finddialog.cpp  formula.cpp  gocell.cpp  sheet.cpp  spreadsheet.cpp  structures.cpp
src/header/: FormulaAST.h  common.h  sheet.h
tools/: readme
